# DS-and-ML-Projects

./: .pdm-python  README.md  app.py  pyproject.toml  setup.py
artifacts/: model.pkl  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 2. MODEL TRAINING.ipynb  EDA STUDENT PERFORMANCE .ipynb  MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/student_performance_prediction/: exeption.py  logger.py  utils.py
src/student_performance_prediction/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/student_performance_prediction/pipeline/: predict_pipeline.py
templates/: home.html
