[project]
name = "DS-and-ML-Projects"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Silvana K", email = "silvanakoharian@gmail.com"},
]
dependencies = [
    "torch>=2.2.1",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
