[project]
name = "Student-Performance-Prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Silvana K", email = "silvanakoharian@gmail.com"},
]
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/#egg=mlproject"]
