[project]
name = "Student-Performance-Prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Silvana K", email = "silvanakoharian@gmail.com"},
]
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "ipykernel>=6.29.3",
    "matplotlib>=3.8.3",
    "scikit-learn>=1.4.1.post1",
    "xgboost>=2.0.3",
    "catboost>=1.2.3",
    "dill>=0.3.8",
    "flask>=3.0.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/#egg=mlproject"]
